--- a/WhatsInMyPocket/en.lproj/MainStoryboard.storyboard
+++ b/WhatsInMyPocket/en.lproj/MainStoryboard.storyboard
@@ -117,10 +117,33 @@
                         </view>
                     </navigationItem>
                     <connections>
+                        <outlet property="noJobsView" destination="snR-g4-dqK" id="Yxg-H1-2Yq"/>
                         <outlet property="resultLabel" destination="Qa7-C0-G7e" id="jag-CR-P9O"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NlL-6t-qnd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="snR-g4-dqK" userLabel="NoJobsView">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="gEB-Qx-6GP">
+                            <rect key="frame" x="14" y="15" width="293" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                            <state key="normal" title="Add a Job">
+                                <color key="titleColor" red="0.34470663270000002" green="0.34470663270000002" blue="0.34470663270000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <state key="highlighted">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="showJobs:" destination="yBs-li-bLX" eventType="touchUpInside" id="IjA-6F-lgC"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                </view>
             </objects>
             <point key="canvasLocation" x="682" y="-210"/>
         </scene>
