--- a/WhatsInMyPocket/SplashViewController_4Inch.xib
+++ b/WhatsInMyPocket/SplashViewController_4Inch.xib
@@ -83,7 +83,7 @@
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC44MTM1OTYxNDE2IDAuODEzNTk2MTQxNiAwLjgxMzU5NjE0MTYgMC41AA</bytes>
+									<bytes key="NSRGB">MC44MTM1OTYxNDE2IDAuNzY1Mzg3MDAxNiAwLjY3NDU5ODgwNDkgMC41AA</bytes>
 								</object>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -135,11 +135,11 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="50293051">
 									<int key="type">2</int>
 									<double key="pointSize">15</double>
 								</object>
-								<object class="NSFont" key="IBUIFont">
+								<object class="NSFont" key="IBUIFont" id="528411916">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
@@ -148,7 +148,7 @@
 							<object class="IBUILabel" id="114679899">
 								<reference key="NSNextResponder" ref="513373050"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{25, 20}, {270, 21}}</string>
+								<string key="NSFrame">{{25, 20}, {270, 28}}</string>
 								<reference key="NSSuperview" ref="513373050"/>
 								<reference key="NSNextKeyView" ref="604826523"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -165,15 +165,8 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription">
-									<int key="type">1</int>
-									<double key="pointSize">17</double>
-								</object>
-								<object class="NSFont" key="IBUIFont">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">17</double>
-									<int key="NSfFlags">16</int>
-								</object>
+								<reference key="IBUIFontDescription" ref="50293051"/>
+								<reference key="IBUIFont" ref="528411916"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
@@ -216,7 +209,6 @@
 								<int key="NSvFlags">256</int>
 								<string key="NSFrame">{{20, 348}, {280, 15}}</string>
 								<reference key="NSSuperview" ref="1073734003"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">4</int>
